# ironclaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.reborn  FEATURE_PARITY.md  README.md  README.zh-CN.md
.claude/commands/: add-sse-event.md  trace.md
.claude/rules/: safety-and-sandbox.md  skills.md  tool-evidence.md  types.md
.githooks/: pre-commit
.github/scripts/: nightly-alert-issue.test.sh
.github/workflows/: ci-verdict.yml  code_style.yml  nightly-deep-ci.yml  reborn-e2e.yml  reborn-integration.yml  reborn-tests.yml  regression-test-check.yml  replay-gate.yml  test.yml
apps/desktop/: CONSOLIDATION.md
channels-src/feishu/: feishu.capabilities.json
crates/: AGENTS.md
crates/agent/: AGENTS.md
crates/agent/ironclaw_reborn/: Cargo.toml
crates/agent/ironclaw_reborn_composition/: Cargo.toml
crates/foundation/: AGENTS.md
crates/ironclaw_agent_loop/: Cargo.toml
crates/ironclaw_event_projections/: Cargo.toml
crates/ironclaw_first_party_extensions/: Cargo.toml
crates/ironclaw_hooks/: Cargo.toml
crates/ironclaw_host_runtime/: Cargo.toml
crates/ironclaw_loop_support/: CLAUDE.md  Cargo.toml
crates/ironclaw_memory/: Cargo.toml
crates/ironclaw_native_extensions/: CLAUDE.md  Cargo.toml
crates/ironclaw_outbound/: CLAUDE.md  Cargo.toml
crates/ironclaw_product_workflow/: Cargo.toml
crates/ironclaw_product_workflow_storage/: Cargo.toml
crates/ironclaw_product_workflow_storage/src/: binding_libsql.rs  binding_postgres.rs  lib.rs  scoped_lifecycle.rs
crates/ironclaw_product_workflow_storage/tests/: durable_ledger_contract.rs
crates/ironclaw_reborn/: Cargo.toml
crates/ironclaw_reborn_api/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_api/src/: auth.rs  envelope.rs  error.rs  idempotency.rs  lib.rs  openapi.rs  state.rs
crates/ironclaw_reborn_api/src/projection/: mod.rs  sse.rs  websocket.rs
crates/ironclaw_reborn_api/tests/: integration.rs
crates/ironclaw_reborn_composition/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_event_store/: Cargo.toml
crates/ironclaw_reborn_extension_host/: Cargo.toml
crates/ironclaw_reborn_extension_host/src/: available_extensions.rs  extension_installation_store.rs  extension_lifecycle.rs  extension_lifecycle_capabilities.rs  gsuite.rs  lib.rs  lifecycle.rs  mcp.rs
crates/ironclaw_reborn_extension_host/src/extension_lifecycle/: active_publication.rs
crates/ironclaw_reborn_http_kit/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_http_kit/src/: body_limit.rs  lib.rs  operator_auth.rs  rate_limit.rs  serve.rs  ws_origin.rs
crates/ironclaw_reborn_llm_admin/: Cargo.toml
crates/ironclaw_reborn_llm_admin/src/: lib.rs  llm_catalog.rs  llm_config_service.rs  llm_reload.rs  nearai_login_serve.rs  resolved.rs
crates/ironclaw_reborn_openai_compat/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_openai_compat_storage/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_product_auth/: Cargo.toml
crates/ironclaw_reborn_product_auth/src/: auth.rs  auth_prompt.rs  config.rs  error.rs  lib.rs  notion_oauth.rs  oauth_dcr.rs  oauth_gate.rs  oauth_provider_client.rs  product_auth_durable.rs  product_auth_providers.rs  product_auth_runtime_credentials.rs
crates/ironclaw_reborn_product_auth/src/google_oauth/: mod.rs
crates/ironclaw_reborn_product_auth/src/product_auth_durable/: provider.rs
crates/ironclaw_reborn_product_auth/src/product_auth_serve/: mod.rs  oauth.rs
crates/ironclaw_reborn_slack_host/: Cargo.toml
crates/ironclaw_reborn_slack_host/src/: lib.rs  slack_channel_routes.rs  slack_delivery.rs  slack_host_beta.rs  slack_host_state.rs  slack_outbound_targets.rs  slack_personal_binding_pairing_serve.rs  slack_personal_binding_serve.rs
crates/ironclaw_reborn_slack_host/src/slack_channel_routes/allowed/: tests.rs
crates/ironclaw_silk_decoder/: Cargo.toml  README.md
crates/ironclaw_silk_decoder/src/: main.rs
crates/ironclaw_storage/: Cargo.toml
crates/ironclaw_webui_v2/: CLAUDE.md
crates/legacy/: AGENTS.md
crates/meta/: AGENTS.md
crates/policy/: AGENTS.md
crates/product/: AGENTS.md
crates/runtime/: AGENTS.md
crates/runtime/ironclaw_capabilities/: Cargo.toml
crates/runtime/ironclaw_dispatcher/: Cargo.toml
crates/runtime/ironclaw_host_runtime/: Cargo.toml
crates/runtime/ironclaw_host_runtime/tests/: host_runtime_services_contract.rs  runtime_policy_planner_contract.rs
crates/runtime/ironclaw_processes/: Cargo.toml
crates/runtime/ironclaw_wasm/: Cargo.toml
crates/runtime/ironclaw_wasm/src/: bindings.rs
crates/runtime/ironclaw_wasm/tests/: wasm_dispatch_integration.rs  wit_tool_runtime_contract.rs
crates/state/: AGENTS.md
docker/reborn/: config.hosted-single-tenant.toml  config.production.toml  config.toml
docs/: docs.json  reborn-binary.md  security.mdx
docs/audits/: 2026-05-18-crate-boundary-audit.md
docs/capabilities/: sandboxed-tools.mdx
docs/extensions/: github.md
docs/internal/: development-history.md  engine-v2-architecture.md  self-improvement.md
docs/plans/: 2026-03-20-engine-v2-architecture.md  2026-03-22-crate-extraction-and-cleanup.md  2026-03-23-self-improving-engine.md  2026-03-24-missions.md  (+9 more)
fuzz/: README.md
scripts/: check-i18n-parity.sh  check_no_panics.py  pre-commit-safety.sh  run-reborn-webui.sh  trace-coverage.sh
src/: app.rs  generated_images.rs  lib.rs  llm_host.rs  reborn_loop_support.rs
tests/: admin_tool_policy_e2e.rs  dockerfile_runtime_home.rs  e2e_live_routine.rs  e2e_trace_memory_isolation.rs  e2e_trace_runtime_policy_org_ceiling_yolo.rs  e2e_trace_runtime_policy_security_properties.rs  engine_v2_gate_integration.rs  openai_compat_integration.rs  provider_chaos.rs  reborn_direct_chat_user_scope_isolation_parity.rs  reborn_identity_tenant_scope_isolation_parity.rs  reborn_loop_support_llm_gateway.rs  reborn_memory_learning_e2e.rs  reborn_trace_file_tools_parity.rs  reborn_trace_first_party_tool_coverage.rs  reborn_trace_wasm_github_fixture_parity.rs  reborn_wrong_scope_access_isolation_parity.rs  skill_chain_load_lifecycle.rs  skill_setup_marker_lifecycle.rs  support_unit_tests.rs
(+815 files in other folders)
