[package]
name = "ironclaw_product_workflow_storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Durable libSQL/Postgres storage for the Reborn product workflow (idempotency ledger + conversation bindings)"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
# Exposes test-only helpers (`TelegramHttpEgress::with_base_url_for_test`)
# to downstream test crates. Off by default so production builds cannot
# accidentally redirect egress to a non-Telegram host. Internal `#[cfg(test)]`
# code uses the helper unconditionally; this feature is for external test
# crates (`tests/`, sibling integration suites) that want the same helper.
test-support = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = "0.4"
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_outbound = { path = "../ironclaw_outbound" }
ironclaw_product_adapters = { path = "../ironclaw_product_adapters" }
ironclaw_product_workflow = { path = "../ironclaw_product_workflow" }
ironclaw_threads = { path = "../ironclaw_threads" }
ironclaw_turns = { path = "../ironclaw_turns" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
ironclaw_product_adapters = { path = "../ironclaw_product_adapters", features = ["test-support"] }
ironclaw_turns = { path = "../ironclaw_turns" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
