[package]
name = "ironclaw_reborn_composition"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
libsql = [
    "dep:libsql",
    "ironclaw_authorization/libsql",
    "ironclaw_filesystem/libsql",
    "ironclaw_host_runtime/libsql",
    "ironclaw_reborn_event_store/libsql",
    "ironclaw_resources/libsql",
    "ironclaw_run_state/libsql",
    "ironclaw_secrets/libsql",
    "ironclaw_turns/libsql",
]
postgres = [
    "dep:deadpool-postgres",
    "ironclaw_authorization/postgres",
    "ironclaw_filesystem/postgres",
    "ironclaw_host_runtime/postgres",
    "ironclaw_reborn_event_store/postgres",
    "ironclaw_resources/postgres",
    "ironclaw_run_state/postgres",
    "ironclaw_secrets/postgres",
    "ironclaw_turns/postgres",
]

[dependencies]
async-trait = "0.1"
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_authorization = { path = "../../policy/ironclaw_authorization" }
ironclaw_extensions = { path = "../../runtime/ironclaw_extensions" }
ironclaw_filesystem = { path = "../../policy/ironclaw_filesystem" }
ironclaw_host_api = { path = "../../foundation/ironclaw_host_api" }
ironclaw_host_runtime = { path = "../../runtime/ironclaw_host_runtime" }
ironclaw_network = { path = "../../policy/ironclaw_network" }
ironclaw_processes = { path = "../../runtime/ironclaw_processes" }
ironclaw_reborn_event_store = { path = "../../state/ironclaw_reborn_event_store" }
ironclaw_resources = { path = "../../policy/ironclaw_resources" }
ironclaw_run_state = { path = "../../state/ironclaw_run_state" }
ironclaw_secrets = { path = "../../policy/ironclaw_secrets" }
ironclaw_trust = { path = "../../policy/ironclaw_trust" }
ironclaw_turns = { path = "../ironclaw_turns" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
secrecy = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt", "time"] }
