[package]
name = "ironclaw_processes"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
futures = "0.3"
ironclaw_events = { path = "../../state/ironclaw_events" }
ironclaw_filesystem = { path = "../../policy/ironclaw_filesystem" }
ironclaw_host_api = { path = "../../foundation/ironclaw_host_api" }
ironclaw_resources = { path = "../../policy/ironclaw_resources" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[dev-dependencies]
ironclaw_event_projections = { path = "../../state/ironclaw_event_projections" }
ironclaw_reborn_event_store = { path = "../../state/ironclaw_reborn_event_store" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
